2024-04-20  Franz Holzinger  <franz@ttproducts.de>
    * better README file
    * remove undefined variable noCacheHash

2024-02-22  Franz Holzinger  <franz@ttproducts.de>
    * It should work with TYPO3 12.
    * rename pi1/flexform_ds_pi1.xml -> Configuration/Flexforms/Plugin.xml

2022-09-10  Franz Holzinger  <franz@ttproducts.de>
    * compatibility TYPO3 8.7: deprecation no 77934: The field `select_key` of the table `tt_content` is not used in the core and has been removed.

2021-03-21  Franz Holzinger  <franz@ttproducts.de>
    * bugfix labels
    * It should work with TYPO3 11 and PHP 8.

2021-10-27  Franz Holzinger  <franz@ttproducts.de>
    * fix issue #2: composer syntax errors

2021-04-16  Franz Holzinger  <franz@ttproducts.de>
    * bugfix labels in flexform
    * It should work with TYPO3 10.

2021-04-15  Franz Holzinger  <franz@ttproducts.de>
    * bugfix issue #1: No ROOT element found in flex form definition. XML element s_general has not been closed.

2020-08-07  Franz Holzinger  <franz@ttproducts.de>
    * bugfix in tt_content TCA addPlugin and others.

2020-01-17  Franz Holzinger  <franz@ttproducts.de>
    * add CSS comment to README.md.
    * remove the legend of the search form
    * remove the template.html

2020-01-15  Franz Holzinger  <franz@ttproducts.de>
    * remove unnecessary parts of the template. This extension is only for the search form and not the list.

2020-01-11  Franz Holzinger  <franz@ttproducts.de>
    * add the Resources from Indexed Search TYPO3 8.7.27
    * renew the configuration: setup.txt lib.macina_searchbox
    * add a constants.txt
    * remove the wizard and remove the plugin
    * update the template file for Indexed Search as Fluid Extension

2019-10-03  Franz Holzinger  <franz@ttproducts.de>
    * add a wizard
    * modification according to the Coding Guidelines
    * Replace the XML file locallang.xml by the files locallang.xlf de.locallang.xlf fi.locallang.xlf it.locallang.xlf pl.locallang.xlf