@@ -5,28 +5,24 @@
 	<sheets>
 		<s_general>
 			<ROOT>
-				<TCEforms>
-                    <sheetTitle>LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.sheet_general</sheetTitle>
-				</TCEforms>
+				<sheetTitle>LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.sheet_general</sheetTitle>
 				<type>array</type>
 				<el>
 					<style>
-						<TCEforms>
-							<onChange>reload</onChange>
-                            <label>LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.display_mode</label>
-                            <config>
-                                <type>select</type>
-                                <renderType>selectSingle</renderType>
-                                <size>1</size>
-                                <maxitems>1</maxitems>
-                                <items type="array">
-                                    <numIndex index="2" type="array">
-                                        <numIndex index="0">LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.display_mode.default</numIndex>
-                                        <numIndex index="1">DEFAULT</numIndex>
-                                    </numIndex>
-                                </items>
-                            </config>
-						</TCEforms>
+						<onChange>reload</onChange>
+						<label>LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.display_mode</label>
+						<config>
+							<type>select</type>
+							<renderType>selectSingle</renderType>
+							<size>1</size>
+							<maxitems>1</maxitems>
+							<items type="array">
+								<numIndex index="2" type="array">
+									<numIndex index="0">LLL:EXT:macina_searchbox/Resources/Private/Language/locallang_db.xlf:tt_content.pi_flexform.display_mode.default</numIndex>
+									<numIndex index="1">DEFAULT</numIndex>
+								</numIndex>
+							</items>
+						</config>
 					</style>
 				</el>
 			</ROOT>
