@@ -27,10 +27,10 @@
     "GPL-2.0-or-later"
   ],
   "require": {
-    "typo3/cms-core": "^11.5 || ^12.4"
+    "typo3/cms-core": "^12.4 || ^13.4"
   },
   "suggest": {
-    "typo3/cms-indexed-search": "^11.5 || ^12.4"
+    "typo3/cms-indexed-search": "^12.4 || ^13.4"
   },
   "autoload": {
     "psr-4": {
