@@ -13,14 +13,14 @@ $EM_CONF[$_EXTKEY] = [
     'author' => 'Franz Holzinger, Wolfgang Becker',
     'author_email' => 'franz@ttproducts.de',
     'author_company' => 'jambage.com',
-    'version' => '3.2.1',
+    'version' => '3.3.0',
     'constraints' => [
         'depends' => [
-            'php' => '7.4.0-8.4.99',
-            'typo3' => '11.5.0-12.4.99',
+            'php' => '8.1.0-8.4.99',
+            'typo3' => '12.4.0-13.4.99',
         ],
         'suggests' => [
-            'indexed_search' => '11.5.0-12.4.99',
+            'indexed_search' => '12.4.0-13.4.99',
         ],
     ],
 ];
