@@ -1,3 +1,8 @@
+2025-01-03  Franz Holzinger  <franz@ttproducts.de>
+    * It should work with TYPO3 13.
+    * Deprecation no. 97126: TCEforms removed in FlexForm
+    * remove AbstractPlugin
+
 2024-04-20  Franz Holzinger  <franz@ttproducts.de>
     * better README file
     * remove undefined variable noCacheHash
